moving search to market tile

--- a/media/css/mkt/site.less
+++ b/media/css/mkt/site.less
@@ -200,8 +200,8 @@ body {
             min-width: 300px;
         }
         > section {
-            padding-left: 10px;
-            padding-right: 10px;
+            padding-left: 0;
+            padding-right: 0;
         }
     }
     #page > section:last-child {
