header buttons layout fixes

--- a/media/css/mkt/header.less
+++ b/media/css/mkt/header.less
@@ -74,11 +74,14 @@
         height: 30px;
         .border-radius(5px);
         .gradient-two-color(#f8f8f8, #d6d6d6);
-        margin: 10px 15px 0 5px;
+        margin: 10px 15px 0;
         .box-shadow(0 1px 0 1px rgba(0,0,0,0.5));
     }
     .filter-button {
         float: right;
+    }
+    .back-button {
+        margin-left: 5px;
     }
 }
 
@@ -235,7 +238,7 @@
         }
         .filter-button {
             display: block;
-            margin: 10px 5px 0 7px;
+            margin: 10px 15px 0 7px;
             line-height: 30px;
             text-align: center;
             font-weight: 600;
