--- a/mkt/detail/templates/detail/app.html
+++ b/mkt/detail/templates/detail/app.html
@@ -36,7 +36,7 @@
   </section>
   {{ notification(product, amo, is_dev) }}
 {% else %}
-  <section class="product-details">
+  <section class="product-details listing">
     {{ market_tile(product) }}
     <div class="actions">
       {% if is_dev %}
