--- a/media/css/mkt/ratings.less
+++ b/media/css/mkt/ratings.less
@@ -254,8 +254,11 @@ header.product {
         display: none;
     }
     span {
-        color: @green;
+        color: @text;
         vertical-align: middle;
+        &:first-child {
+            padding-right: 4px;
+        }
     }
     &:hover span {
         text-decoration: none;
